# python-web-service-study

./: .gitignore  create-db.sh  docker-compose.yml  pg-pod.yaml
.docker/: Dockerfile  createdb.sql
fastapi-basic-security/: pyproject.toml
fastapi-basic-security/app/: main.py
fastapi_sqlalchemy/: pyproject.toml
fastapi_sqlalchemy/app/: main.py
fastapi_sqlalchemy/app/db/: env.py  func.py
fastapi_sqlalchemy/app/entities/: __init__.py  item.py  movie.py  user.py
fastapi_sqlalchemy/app/repositories/: __init__.py  movie_repository.py  user_repository.py
fastapi_sqlalchemy/app/templates/: index.html
fastapi_sqlalchemy/app/templates/partials/: table.html
fastapi_sqlalchemy/app/utils/: seed.py
fastapi_sqlalchemy/app/viewmodels/: __init__.py  item.py  movie.py  user.py
fasthtmx/: alembic.ini  pyproject.toml  testmodel.py
fasthtmx/fasthtmx/: db.py  main.py
fasthtmx/fasthtmx/schema/: song.py
fasthtmx/migrations/: env.py
fasthtmx/migrations/versions/: e251f0002902_add_year.py
fastorm/: alembic.ini  pyproject.toml  testmodel.py
fastorm/fastorm/: db.py  main.py
fastorm/fastorm/schema/: hero.py
fastorm/migrations/: env.py
fastorm/migrations/versions/: c1542a6fea66_init.py
jewel_app/: database.db  gem.db  populate.py  pyproject.toml  run.py
jewel_app/jewel_app/: db.py  main.py
jewel_app/jewel_app/models/: gem.py  user.py
jewel_app/jewel_app/routers/: gems.py  users.py
jewel_app/jewel_app/services/: auth_handler.py
jewel_app/jewel_app/viewmodels/: gems.py  users.py
jewel_app/samples/: learn-auth.py  learn-sqlmodel.py
learn-sqlmodel/: basic-tutorial-async.py  basic-tutorial-create-async.py  basic-tutorial-delete.py  basic-tutorial-hero-team.py  basic-tutorial-many2many.py  basic-tutorial-many2many_more.py  basic-tutorial-read-async.py  basic-tutorial-read.py  basic-tutorial-relationship.py  basic-tutorial-update.py  basic-tutorial.py  pyproject.toml
learn-sqlmodel/hero/: db.py  db_async.py
learn-sqlmodel/hero/db/: __init__.py
learn-sqlmodel/hero/models/: hero.py  hero_m2m.py  hero_m2m_more.py  hero_relationship.py
learn-sqlmodel/hero/util/: logging.py
mifaker-python/: pyproject.toml  run.py  test.http  test.py
mifaker-python/mifaker/: main.py
mifaker-python/mifaker/models/: generate.py  users.py
mifaker-python/mifaker/routers/: generate.py  users.py
mifaker-python/mifaker/services/: make_classes.py
pyweb-infra/: docker-compose.yml
