[tool.poetry]
name = "fastapi_sqlalchemy"
version = "0.1.0"
description = ""
authors = ["joonhwan <joonhwan.lee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.82.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.971"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
