[tool.poetry]
name = "fastorm"
version = "0.1.0"
description = ""
authors = ["joonhwan <joonhwan.lee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.79.1"}
sqlmodel = "^0.0.6"
psycopg2-binary = "^2.9.3"
loguru = "^0.6.0"
asyncpg = "^0.26.0"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
podman-compose = "^1.0.3"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
