[tool.poetry]
name = "learn-sqlmodel"
version = "0.1.0"
description = ""
authors = ["joonhwan <joonhwan.lee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.8"
asyncpg = "^0.26.0"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
